# denso_dual_arm_manipulation

./: README.md  package.xml  setup.cfg  setup.py
config/: distance.xacro  lift_box.xacro  scene_config.xacro  virtual_walls.yaml
dual_denso_arm_manipulation/: add_virtual_wall.py  box_pose_sub.py  box_spawner.py  collision_manager.py  controller_auto_switcher.py  dual_cartesian_waypoints.py  dual_follow_waypoints.py  ee_box_linker.py  end_effector_pose.py  follow_waypoints.py  follow_waypoints_optim.py  go_to_pose.py  joint_state_mux.py  lift_traj_generator.py  robust_waypoints_optim.py  spawn_lift_box_rviz.py  traj_to_csv.py  utils.py
launch/: comb_multi_robot_bringup.launch.py  comb_multi_robot_bringup_launch.py  dual_waypoints.launch.py  hw_multi_robot_bringup.launch.py  lift_box.launch.py  multi_robot_bringup.launch.py  safe_go_to_pose.launch.py  safe_go_to_pose_launch.py  safe_optim_waypoints.launch.py  safe_optim_waypoints_launch.py  safe_waypoints.launch.py  safe_waypoints_launch.py
manip_facts_lab/: add_virtual_wall.py  dual_follow_waypoints.py  ee_pose_pub.py  follow_waypoints.py  follow_waypoints_optim.py  go_to_pose.py  nullspace_optimizer.py  robust_waypoints_optim.py
scripts/: robust_specs.py  utils.py
urdf/: denso_robot_kinematics.xacro  denso_robot_macro.xacro  dual_denso_robot_macro.xacro
waypoints/: crash_left.csv  crash_right.csv  waypoints_0.csv  waypoints_1.csv  waypoints_2.csv  waypoints_3.csv  waypoints_4_left.csv  waypoints_4_right.csv  waypoints_test_left.csv  waypoints_test_right.csv
worlds/: empty_with_attachment.world
(+27 files in other folders)
